welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:1: error: ')' expected but '}' found.
def lastDigit(a:Int, b:Int, c:Int):Boolean = {return ((a%10)==((b%10))||((a%10)==(c%10))||((b%10)==(c%10))} 
                                                                                                          ^